libs/@local/hashql/ast/tests/ui/lowering/type-extractor/definition/non-contractive-self.jsonc
//@ run: fail
//@ description: Union of itself should fail
[
  "type",
  "A",
  ["|", "A", "A"],
  //~^ ERROR Type `A` cannot reference itself directly
  "_"
]
